# djedi-cms

./: .buildinfo  .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS  CNAME  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  api.html  docker-compose.yml  genindex.html  index.html  installation.html  objects.inv  plugins.html  runtests.py  search.html  searchindex.js  settings.html  setup.cfg  setup.py  tox.ini  uri.html  usage.html
.circleci/: config.yml
.github/workflows/: main.yml  release-djedi-react.yml
_sources/: index.txt  installation.txt  plugins.txt  settings.txt  uri.txt  usage.txt
djedi/: __init__.py  apps.py  compat.py  loaders.py  models.py  urls.py
djedi-react/: .babelrc  .dockerignore  .eslintignore  .eslintrc.js  .npm-upgrade.json  CHANGELOG.md  Dockerfile  LICENSE  README.md  babel-plugin.js  jest.config.js  next.config.js  package-lock.json  package.json
djedi-react/components/: CookieWarning.js  Link.js  Search.js  Toplist.js
djedi-react/pages/: _app.js  about.js  index.js  (+1 more)
docs/: Makefile  conf.py  index.rst  installation.rst  plugins.rst  settings.rst  uri.rst  usage.rst
swc-plugin-djedi-react/: Cargo.toml  package.json  swc_plugin_djedi_react.wasm
swc-plugin-djedi-react/src/: lib.rs
swc-plugin-djedi-react/tests/: input.js
swc-plugin-djedi-react/tests/__swc_snapshots__/src/lib.rs/: directives.js  markdown_template_literal.js  nodes.js  tagged_template_literal.js  template_literal.js
tests/: asserts.py  cache_debug.py  conftest.py  test_cache.py  test_rest.py  test_templatetags.py
(+131 files in other folders)
