[package]
name = "swc-plugin-djedi-react"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
serde = "1"
swc_core = { version = "0.86", features = ["ecma_plugin_transform", "__utils"] }
tracing = "0.1.40"

[dev-dependencies]
swc_ecma_parser = "0.141.34"

# .cargo/config defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
